# C--

./: .gitignore  Cargo.toml  README.md  TUTORIAL.md
src/: compiler_driver.rs  lib.rs
src/common/: validation.rs
src/compiler/: mod.rs
src/compiler/ir/: mod.rs
tests/: test_e2e.rs  test_preprocessor.rs  test_validation.rs
tests/snapshots/: test_e2e__assembly_code@binary_ampersand.c.snap  test_e2e__assembly_code@binary_comparison.c.snap  test_e2e__assembly_code@binary_diff.c.snap  test_e2e__assembly_code@binary_diff.c.snap.new  test_e2e__assembly_code@binary_div.c.snap  test_e2e__assembly_code@binary_div.c.snap.new  test_e2e__assembly_code@binary_modulo.c.snap  test_e2e__assembly_code@binary_modulo.c.snap.new  test_e2e__assembly_code@binary_mult.c.snap  test_e2e__assembly_code@binary_mult.c.snap.new  test_e2e__assembly_code@binary_op_precedence.c.snap  test_e2e__assembly_code@binary_op_precedence.c.snap.new  test_e2e__assembly_code@binary_or.c.snap  test_e2e__assembly_code@binary_sum.c.snap  test_e2e__assembly_code@binary_sum.c.snap.new  test_e2e__assembly_code@integer_constant.c.snap  test_e2e__assembly_code@nested_expression.c.snap  test_e2e__assembly_code@parenthesized_expression.c.snap  test_e2e__assembly_code@unary_complement.c.snap  test_e2e__assembly_code@unary_negation.c.snap  test_e2e__codegen@binary_ampersand.c.snap  test_e2e__codegen@binary_comparison.c.snap  test_e2e__codegen@binary_diff.c.snap  test_e2e__codegen@binary_diff.c.snap.new  test_e2e__codegen@binary_div.c.snap  test_e2e__codegen@binary_div.c.snap.new  test_e2e__codegen@binary_modulo.c.snap  (+73 more)
(+28 files in other folders)
