[package]
name = "cmm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0"}
clap = { version = "4.5.0", features = ["derive"] }
tempfile = { version = "3.23.0" }
regex = { version = "1.12.0" }

[dev-dependencies]
insta = { version = "1.44.3", features = ["glob"]}

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
